cursive-bootstrap/tests/ui/E-CNF/E-CNF-0403.cursive
// RUN: compile-fail
// DIAG: E-CNF-0403
// SPEC: 1.1
// DESC: Primitive type name shadowed at module scope

type i32 = bool  //~ ERROR E-CNF-0403: Primitive type shadowed

public procedure main(move ctx: Context) -> i32 {
    return 0
}
